<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <android.support.v4.view.ViewPager
        android:id="@+id/field1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:orientation="vertical"
        android:background="#FF909090">
    </LinearLayout>

    <GridLayout
        android:id="@+id/multiple_choice_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="2">

    </GridLayout>


</LinearLayout>

