...
            android:max="5"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize=".0" />
        </LinearLayout>
        <Button
            android:id="@+id/recent_item_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_text"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>
...
